--- a/core/templates/blog_base.html
+++ b/core/templates/blog_base.html
@@ -27,7 +27,7 @@
     <!-- Icons -->
     <link href="{% static '/assets/css/common-css/ionicons.css' %}" rel="stylesheet">
   <link href="{% static '/assets/css/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static '/assets/css/common-css/swiper.css' %}" rel="stylesheet">
+  <!-- <link href="{% static '/assets/css/common-css/swiper.css' %}" rel="stylesheet"> -->
   <link rel="stylesheet" href="/static/assets/css/blog/styles.css" type="text/css">
   <link rel="stylesheet" href="/static/assets/css/blog/responsive.css" type="text/css">
   <link rel="stylesheet" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
