--- a/core/templates/blog_base.html
+++ b/core/templates/blog_base.html
@@ -33,8 +33,10 @@
   <link rel="stylesheet" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
   <link href="{% static 'blog/css/loader.css' %}" rel="stylesheet">
   {% endcompress css %}
-  
+  <!-- <link rel="stylesheet"  href="/static/ckeditor/ckeditor/plugins/liststyle/dialogs/liststyle.js" > -->
  <!-- start ckeditor highlighter -->
+ <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+ <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 	<link rel="stylesheet"  href="/static/ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/github.css" >
 <script  src="/static/ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js" ></script>
 <script>hljs.initHighlightingOnLoad();</script>
@@ -91,14 +93,25 @@
   }
   
 </style>
-
+<script>
+  $('div.docSection').find('ol').each( function() {
+    var list_style_type = $( this ).css("list-style-type");
+    $( this ).find('li').each( function () {
+    $( this ).css("list-style-type", list_style_type);
+    });
+  });
+</script>
 {% compress js %}
   <script src="{% static '/assets/js/common-js/jquery-3.5.min.js' %}"></script>
   <script src="{% static '/assets/js/bootstrap/bootstrap.min.js' %}"></script>
   <script src="{% static '/assets/js/common-js/tether.min.js' %}"></script>
 
   <script>
+    
     $(document).ready(function(){
+
+     
+        
       $(window).scroll(function () {
           if ($(this).scrollTop() > 50) {
             $('#back-to-top').fadeIn();
